Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-22174

ShaderEffectSource does not provide signal when content is updated

    XMLWordPrintable

Details

    • aa6d47e9c45bbff074cc43596b2d5d4150aebb8b

    Description

      Currently ShaderEffectSource provides scheduleUpdate() method in its API which asynchronously causes the FBO content to be updated. However there does not seem to be a way to know when the content has been updated. This is especially awkward when using ShaderEffectSource as a recursive content source & destination, it is difficult to know when initial content has been rendered and feedback loop should be activated.

      From the users point of view a timer does not seem to be a reliable way to workaround this, especially soon after the items have been created the update is sometimes delayed for a quite long periods.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kkalland Kim Motoyoshi Kalland (Inactive)
            markniem Marko Niemelä
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes