Emit signal when texture is updated in ShaderEffectSource.

Added a signal scheduledUpdateCompleted() which is emitted after
the texture content has been updated as a result of a call to
scheduleUpdate(). Also renamed the textureChanged() signal to
updateRequested(), which I think is a more accurate name.

Task-number: QTBUG-22174
Change-Id: If4d29e3be3a953494562d1ff55045f2154491d97
Reviewed-by: Yoann Lopes <yoann.lopes@nokia.com>